translation , css , responsive

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -21,6 +21,37 @@
     "question":"Pour toute question, vous pouvez nous joindre au",
     "controle technique":"Controle technique",
     "climatisation":"Climatisation",
-    "autres":"Autres"
+    "autres":"Autres",
+    "Nos partenaires premium":"Nos partenaires premium",
+    "Nos autres partenaires":"Nos autres partenaires",
+    "Et bien d'autres encore":" Et bien d'autres encore ...",
+    "egalement":"Nous travaillons égalements avec d'autres marques , pour toutes informations supplémentaires n'hésitez pas à nous contacter via",
+    "formulaire":"ce formulaire ou par téléphone",
+    "preparation":"Préparation au controle technique",
+    "introduction":"introduction",
+    "introduction-text": "Avant de soumettre votre véhicule au contrôle technique, une visite préalable chez votre garagiste est fortement conseillée. Cela permet d'identifier et de corriger les éventuels problèmes pour assurer un passage réussi.",
+    "points de controle":"Points de contrôle",
+    "controle-text":"Nous effectuons une vérification complète des points de contrôle exigés lors du contrôle technique, incluant les freins, les lumières, l'émission des gaz d'échappement, et bien d'autres aspects cruciaux pour votre sécurité et celle des autres usagers de la route.",
+    "importance":"L'importance de la préparation",
+    "importance-text":"Une préparation adéquate réduit le risque de contre-visite, vous permettant ainsi de gagner du temps et d'économiser de l'argent. De plus, cela contribue à maintenir votre véhicule en bon état de fonctionnement, prolongeant sa durée de vie et assurant votre sécurité.",
+    "nos services":"Nos services",
+    "services-text":"Notre garage offre une inspection pré-contrôle technique qui inclut un diagnostic complet du véhicule. Nous proposons ensuite les réparations nécessaires pour garantir que votre véhicule passe le contrôle technique sans encombre.",
+    "climatisation-titre":"Entretien de la Climatisation",
+    "pourquoi":"Pourquoi l'entretien de la climatisation est important ?",
+    "pourquoi-text":"L'entretien régulier de la climatisation est crucial pour garantir un air intérieur sain dans votre véhicule, une performance optimale du système et éviter des réparations coûteuses dues à des négligences.",
+    "verif":"Quand faire vérifier la climatisation ?",
+    "verif-text":"Il est conseillé de faire vérifier votre système de climatisation au moins une fois par an, idéalement avant l'arrivée des fortes chaleurs de l'été.",
+    "comprends":"Que comprend l'entretien de la climatisation ?",
+    "comprends-text":"Nos techniciens spécialisés procèdent à une vérification complète du système de climatisation, incluant le niveau de réfrigérant, l'état du filtre d'habitacle, les possibles fuites, et l'efficacité du compresseur.",
+    "nos-text":"Notre garage offre un service complet pour l'entretien de la climatisation, assurant que votre système fonctionne efficacement, que l'air dans votre véhicule reste frais et pur, tout en prévenant d'éventuelles pannes.",
+    "partenaire-o":"Partenaire officiel",
+    "visitez":"Visiter le site",
+    "egal":"Nous travallions également avec :",
+    "contactez-nous":"Contactez-nous",
+    "envoyer":"Envoyer"
+    
+
+
+
 
 }
