--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -22,6 +22,32 @@
     "question":"Voor eventuele vragen kunt u contact met ons opnemen via",
     "controle technique":"technische controle",
     "climatisation":"airco",
-    "autres":"anderen"
-    
+    "autres":"anderen",
+    "Nos partenaires premium":"Onze premium partners",
+    "Nos autres partenaires":"Onze andere partners",
+    "Et bien d'autres encore":"En nog veel meer ...",
+    "egalement" : "We werken ook met andere merken, voor meer informatie kunt u contact met ons opnemen via",
+    "formulaire" :" dit formulier of telefonisch",
+    "preparation":" Voorbereiding op de technische controle",
+    "introduction":"Invoering",
+    "introduction-text":"Voordat u uw voertuig aan de technische controle onderwerpt, is een voorafgaand bezoek aan uw garage sterk aanbevolen. Dit maakt het mogelijk om eventuele problemen te identificeren en te corrigeren om een succesvolle doorgang te garanderen.",
+    "points de controle":"Controlepunten",
+    "controle-text":"We voeren een volledige controle uit van de controlepunten die vereist zijn tijdens de technische controle, waaronder remmen, lichten, uitlaatgasemissie en vele andere cruciale aspecten voor uw veiligheid en die van andere weggebruikers.",
+    "importance":"Het belang van voorbereiding",
+    "importance-text":"Een goede voorbereiding vermindert het risico op een tegenbezoek, waardoor u tijd en geld bespaart. Bovendien helpt het om uw voertuig in goede staat te houden, waardoor de levensduur wordt verlengd en uw veiligheid wordt gegarandeerd.",
+    "nos services":"Onze diensten",
+    "services-text":"Onze garage biedt een voorafgaande technische controle-inspectie die een volledige diagnose van het voertuig omvat. We bieden vervolgens de nodige reparaties aan om ervoor te zorgen dat uw voertuig de technische controle zonder problemen doorstaat.",
+    "climatisation-titre":"Airconditioning onderhoud",
+    "pourquoi":"Waarom is airconditioningonderhoud belangrijk?",
+    "pourquoi-text":"Regelmatig onderhoud van de airconditioning is cruciaal om gezonde binnenlucht in uw voertuig te garanderen, een optimale prestatie van het systeem en dure reparaties te voorkomen als gevolg van verwaarlozing.",
+    "verif":"Wanneer moet de airconditioning worden gecontroleerd?",
+    "verif-text":"Het wordt aanbevolen om uw airconditioningsysteem minstens eenmaal per jaar te laten controleren, bij voorkeur voordat de zomerse hitte arriveert.",
+    "comprends":"Wat omvat airconditioningonderhoud?",
+    "comprends-text":"Onze gespecialiseerde technici voeren een volledige controle uit van het airconditioningsysteem, inclusief het koelmiddelniveau, de staat van het interieurfilter, mogelijke lekken en de efficiëntie van de compressor.",
+    "nos-text":"Onze garage biedt een volledige service voor airconditioningonderhoud, zodat uw systeem efficiënt werkt, de lucht in uw voertuig fris en zuiver blijft en mogelijke storingen worden voorkomen.",
+    "partenaire-o":"Onze officiële partner",
+    "visitez":"Bezoek de site",
+    "egal":"We werken ook met",
+    "contactez-nous":"Contacteer ons",
+    "envoyer":"Verzenden"    
 }
