--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -28,7 +28,7 @@
     "egalement":"Nous travaillons égalements avec d'autres marques , pour toutes informations supplémentaires n'hésitez pas à nous contacter via",
     "formulaire":"ce formulaire ou par téléphone",
     "preparation":"Préparation au controle technique",
-    "introduction":"introduction",
+    "introduction":"Introduction",
     "introduction-text": "Avant de soumettre votre véhicule au contrôle technique, une visite préalable chez votre garagiste est fortement conseillée. Cela permet d'identifier et de corriger les éventuels problèmes pour assurer un passage réussi.",
     "points de controle":"Points de contrôle",
     "controle-text":"Nous effectuons une vérification complète des points de contrôle exigés lors du contrôle technique, incluant les freins, les lumières, l'émission des gaz d'échappement, et bien d'autres aspects cruciaux pour votre sécurité et celle des autres usagers de la route.",
@@ -49,7 +49,7 @@
     "egal":"Nous travallions également avec :",
     "contactez-nous":"Contactez-nous",
     "envoyer":"Envoyer"
-    
+
 
 
 
