pages jantes ,responsives ,ajustements et traduction

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -48,7 +48,10 @@
     "visitez":"Visiter le site",
     "egal":"Nous travallions également avec :",
     "contactez-nous":"Contactez-nous",
-    "envoyer":"Envoyer"
+    "envoyer":"Envoyer",
+    "alcar-text": "Alcar est un fabricant de jantes en acier et en aluminium. La société est basée en Allemagne et est l'un des plus grands fabricants de jantes en Europe.",
+    "toutes-jantes":"Toutes les jantes sont disponible uniquement sur commande",
+    "atraxion-text": " Atraxion est une marque de jantes en aluminium. La société est basée en France et propose des jantes de qualité à des prix abordables."
 
 
 
