--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -49,5 +49,8 @@
     "visitez":"Bezoek de site",
     "egal":"We werken ook met",
     "contactez-nous":"Contacteer ons",
-    "envoyer":"Verzenden"    
+    "envoyer":"Verzenden",
+    "alcar-text" : "Alcar is een fabrikant van stalen en aluminium velgen. Het bedrijf is gevestigd in Duitsland en is een van de grootste velgenfabrikanten in Europa.",   
+    "toutes-jantes" : "Alle velgen zijn alleen op bestelling verkrijgbaar",
+    "atraxion-text" : "Atraxion is een merk van aluminium velgen. Het bedrijf is gevestigd in Frankrijk en biedt kwaliteitsvelgen tegen betaalbare prijzen."
 }
