fav icon , garage background change + rework leasing

--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -1,11 +1,11 @@
 {
-    "home": "ontvangst",
-    "about": "over",
-    "contact": "contact",
+    "home": "Ontvangst",
+    "about": "Over",
+    "contact": "Contact",
     "services": "diensten",
     "entretiens": "onderhoud",
-    "jantes": "velgen",
-    "pneus": "banden",
+    "jantes": "Velgen",
+    "pneus": "Banden",
     "partenaires": "partners",
     "title":"banden bosmans",
     "horaire": "Openingsuren",
@@ -21,7 +21,7 @@
     "legarage":"de garage is momenteel",
     "question":"Voor eventuele vragen kunt u contact met ons opnemen via",
     "controle technique":"technische controle",
-    "climatisation":"airco",
+    "climatisation":"Airco",
     "autres":"anderen",
     "Nos partenaires premium":"Onze premium partners",
     "Nos autres partenaires":"Onze andere partners",
