adjustements , banner and cookies

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -51,7 +51,10 @@
     "envoyer":"Envoyer",
     "alcar-text": "Alcar est un fabricant de jantes en acier et en aluminium. La société est basée en Allemagne et est l'un des plus grands fabricants de jantes en Europe.",
     "toutes-jantes":"Toutes les jantes sont disponible uniquement sur commande",
-    "atraxion-text": " Atraxion est une marque de jantes en aluminium. La société est basée en France et propose des jantes de qualité à des prix abordables."
+    "atraxion-text": " Atraxion est une marque de jantes en aluminium. La société est basée en France et propose des jantes de qualité à des prix abordables.",
+    "banner": "L'été arrive ! N'oubliez pas de venir faire changer vos pneus.",
+    "cookie": "Nous utilisons des cookies pour améliorer votre expérience sur notre site. En acceptant, vous acceptez notre utilisation des cookies.",
+    "accept":"J'accepte les cookies"
 
 
 
