--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -52,5 +52,8 @@
     "envoyer":"Verzenden",
     "alcar-text" : "Alcar is een fabrikant van stalen en aluminium velgen. Het bedrijf is gevestigd in Duitsland en is een van de grootste velgenfabrikanten in Europa.",   
     "toutes-jantes" : "Alle velgen zijn alleen op bestelling verkrijgbaar",
-    "atraxion-text" : "Atraxion is een merk van aluminium velgen. Het bedrijf is gevestigd in Frankrijk en biedt kwaliteitsvelgen tegen betaalbare prijzen."
+    "atraxion-text" : "Atraxion is een merk van aluminium velgen. Het bedrijf is gevestigd in Frankrijk en biedt kwaliteitsvelgen tegen betaalbare prijzen.",
+    "banner" : "De zomer komt eraan! Vergeet niet om uw banden te laten vervangen.",
+    "cookie" : "We gebruiken cookies om uw ervaring op onze site te verbeteren. Door te accepteren, gaat u akkoord met ons gebruik van cookies",
+    "accept" : "Ik accepteer cookies"
 }
