responsive , refont footer, adjustments

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -54,7 +54,8 @@
     "atraxion-text": " Atraxion est une marque de jantes en aluminium. La société est basée en France et propose des jantes de qualité à des prix abordables.",
     "banner": "L'été arrive ! N'oubliez pas de venir faire changer vos pneus.",
     "cookie": "Nous utilisons des cookies pour améliorer votre expérience sur notre site. En acceptant, vous acceptez notre utilisation des cookies.",
-    "accept":"J'accepte les cookies"
+    "accept":"J'accepte les cookies",
+    "ferme":"Fermé"
 
 
 
