--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -55,5 +55,6 @@
     "atraxion-text" : "Atraxion is een merk van aluminium velgen. Het bedrijf is gevestigd in Frankrijk en biedt kwaliteitsvelgen tegen betaalbare prijzen.",
     "banner" : "De zomer komt eraan! Vergeet niet om uw banden te laten vervangen.",
     "cookie" : "We gebruiken cookies om uw ervaring op onze site te verbeteren. Door te accepteren, gaat u akkoord met ons gebruik van cookies",
-    "accept" : "Ik accepteer cookies"
+    "accept" : "Ik accepteer cookies",
+    "ferme" : "Gesloten"
 }
