--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -46,7 +46,7 @@
     "nos-text":"Notre garage offre un service complet pour l'entretien de la climatisation, assurant que votre système fonctionne efficacement, que l'air dans votre véhicule reste frais et pur, tout en prévenant d'éventuelles pannes.",
     "partenaire-o":"Partenaire officiel",
     "visitez":"Visiter le site",
-    "egal":"Nous travallions également avec :",
+    "egal":"Nos autres partneraires :",
     "contactez-nous":"Contactez-nous",
     "envoyer":"Envoyer",
     "alcar-text": "Alcar est un fabricant de jantes en acier et en aluminium. La société est basée en Allemagne et est l'un des plus grands fabricants de jantes en Europe.",
