--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -47,7 +47,7 @@
     "nos-text":"Onze garage biedt een volledige service voor airconditioningonderhoud, zodat uw systeem efficiënt werkt, de lucht in uw voertuig fris en zuiver blijft en mogelijke storingen worden voorkomen.",
     "partenaire-o":"Onze officiële partner",
     "visitez":"Bezoek de site",
-    "egal":"We werken ook met",
+    "egal" : "Onze andere partners :",
     "contactez-nous":"Contacteer ons",
     "envoyer":"Verzenden",
     "alcar-text" : "Alcar is een fabrikant van stalen en aluminium velgen. Het bedrijf is gevestigd in Duitsland en is een van de grootste velgenfabrikanten in Europa.",   
