about page + correctifs

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -55,7 +55,13 @@
     "banner": "L'été arrive ! N'oubliez pas de venir faire changer vos pneus.",
     "cookie": "Nous utilisons des cookies pour améliorer votre expérience sur notre site. En acceptant, vous acceptez notre utilisation des cookies.",
     "accept":"J'accepte les cookies",
-    "ferme":"Fermé"
+    "ferme":"Fermé",
+    "about1" :"L'histoire de notre société commence en 1935 lorsque Arthur Bosmans se lance dans le commerce du pneu après avoir suivi une formation de vulcanisateur chez Doyen à Bruxelles.",
+    "about2":"Après s'être caché pendant 5 ans lors de le seconde guerre, il commence son commerce de pneus. Depuis lors nous sommes la troisième génération qui exploitons ce commerce de pneus. Le métier a depuis bien changé car la technologie du pneu a fort heureusement évolué avec l'évolution des nouveaux véhicules.",
+    "about3":"Nous mettons un point d'honneur à répondre présent aux demandes de nos nombreux clients. Cela commence par l'accueil du client au comptoir. Nous sommes à l'écoute afin de pouvoir au mieux le conseiller et  ensuite le diriger vers nos ateliers où notre équipe de monteurs s'atèle à fournir un travail de qualité et professionnel.",
+    "about4":" Depuis tout ce temps nous proposons à notre clientèle divers services dont la partie pneumatique avec ses accessoires mais aussi depuis quelque temps nous proposons une partie mécanique avec les entretiens et préparation des véhicules pour le contrôle technique. Nous avons beaucoup de chance de pouvoir travailler avec une équipe efficace et professionnelle qui participe à des formations afin d'etre toujours compétant pour le travail à effectuer. Nous sommes très fier que cette société en soit à sa troisième génération au service de nos clients.",
+    "overons":"À propos de nous ..."
+
 
 
 
