--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -56,5 +56,10 @@
     "banner" : "De zomer komt eraan! Vergeet niet om uw banden te laten vervangen.",
     "cookie" : "We gebruiken cookies om uw ervaring op onze site te verbeteren. Door te accepteren, gaat u akkoord met ons gebruik van cookies",
     "accept" : "Ik accepteer cookies",
-    "ferme" : "Gesloten"
+    "ferme" : "Gesloten",
+    "about1":"De geschiedenis van ons bedrijf begint in 1935, toen Arthur Bosmans na een opleiding als vulkanisator bij Doyen in Brussel in de bandenbranche begon.",
+    "about2":"Na vijf jaar ondergedoken te zijn geweest tijdens de Tweede Wereldoorlog, begon hij zijn bandenbedrijf. Sindsdien zijn wij de derde generatie die dit bandenbedrijf exploiteert. Het beroep is sindsdien veel veranderd omdat de bandentechnologie gelukkig is geëvolueerd met de evolutie van nieuwe voertuigen.",
+    "about3":"Wij maken er een erezaak van om te reageren op de verzoeken van onze vele klanten. Het begint met het verwelkomen van de klant aan de balie. We luisteren zodat we ze het beste kunnen adviseren en verwijzen ze vervolgens door naar onze werkplaatsen waar ons team van monteurs werkt om kwaliteit en professioneel werk te leveren.",
+    "about4":"Al die tijd bieden wij onze klanten verschillende diensten aan, waaronder het pneumatische gedeelte met bijbehorende accessoires, maar ook al enige tijd bieden wij een mechanisch gedeelte aan met onderhoud en voorbereiding van voertuigen voor technische inspectie. Wij hebben het geluk te kunnen werken met een efficiënt en professioneel team dat deelneemt aan trainingen om altijd bekwaam te zijn voor het uit te voeren werk. Wij zijn erg trots dat dit bedrijf in de derde generatie onze klanten bedient.",
+    "overons":"Over ons ..."
 }
