--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -70,7 +70,7 @@
     "ans":"ans",
     "sectionabout":"Notre garage est une affaire familiale qui a été transmise de génération en génération. Nous sommes spécialisés dans la vente de pneus et jantes, ainsi que dans l'entretien et la réparation de véhicules. Nous travaillons depuis 88 ans maintenant pour vous offrir un service de qualité, rapide et efficace.",
     "adresse":"adresse",
-    "liens":"Liens utilesc"
+    "liens":"Liens utiles"
     
 
 
