--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -71,7 +71,8 @@
     "sectionabout":"Notre garage est une affaire familiale qui a été transmise de génération en génération. Nous sommes spécialisés dans la vente de pneus et jantes, ainsi que dans l'entretien et la réparation de véhicules. Nous travaillons depuis 89 ans maintenant pour vous offrir un service de qualité, rapide et efficace.",
     "adresse":"Adresse",
     "liens":"Liens utiles",
-    "alert":"Attention: Le garage sera fermé du 31 octobre au 3 novembre 2024"
+    "alert":"Attention: Le garage sera fermé du 31 octobre au 3 novembre 2024",
+    "jantes-title":"Nos partenaires jantes"
     
 
 
