--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -72,7 +72,8 @@
     "sectionabout":"Onze garage is een familiebedrijf dat van generatie op generatie is doorgegeven. Wij zijn gespecialiseerd in de verkoop van banden en velgen, evenals in het onderhoud en de reparatie van voertuigen. Al 89 jaar werken wij om u een snelle, efficiënte en kwalitatieve service te bieden.",
     "adresse":"adressen",
     "liens":"handige links",
-    "alert":"De garage zal gesloten zijn van 31 oktober tot en met 3 november 2024."
+    "alert":"De garage zal gesloten zijn van 31 oktober tot en met 3 november 2024.",
+    "jantes-title":"Onze velgenpartners"
 
 
 
