--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -29,7 +29,7 @@
     "formulaire":"ce formulaire ou par téléphone",
     "preparation":"Préparation au controle technique",
     "introduction":"Introduction",
-    "introduction-text": "Nous vérifions l'état des pneus , le réglagees des phares, les plaquettes et les disques de freins ainsi que les ammortisseurse et nous faisons éventuellement le petit entretien de votre voiture",
+    "introduction-text": "Notre garage vérifie l'état des pneus , le réglagees des phares, les plaquettes et les disques de freins ainsi que les ammortisseurse et nous faisons éventuellement le petit entretien de votre voiture",
     "points de controle":"Points de contrôle",
     "controle-text":"Nous effectuons une vérification complète des points de contrôle exigés lors du contrôle technique, incluant les freins, les lumières, l'émission des gaz d'échappement, et bien d'autres aspects cruciaux pour votre sécurité et celle des autres usagers de la route.",
     "importance":"L'importance de la préparation",
@@ -56,7 +56,7 @@
     "cookie": "Nous utilisons des cookies pour améliorer votre expérience sur notre site. En acceptant, vous acceptez notre utilisation des cookies.",
     "accept":"J'accepte les cookies",
     "ferme":"Fermé",
-    "about1" :"L'histoire de notre société commence en 1935 lorsque Arthur Bosmans se lance dans le commerce du pneu après avoir suivi une formation de vulcanisateur chez Doyen à Bruxelles.",
+    "about1" :"L'histoire de notre garage commence en 1935 lorsque Arthur Bosmans se lance dans le commerce du pneu après avoir suivi une formation de vulcanisateur chez Doyen à Bruxelles.",
     "about2":"Après s'être caché pendant 5 ans lors de le seconde guerre, il commence son commerce de pneus. Depuis lors nous sommes la troisième génération qui exploitons ce commerce de pneus. Le métier a depuis bien changé car la technologie du pneu a fort heureusement évolué avec l'évolution des nouveaux véhicules.",
     "about3":"Nous mettons un point d'honneur à répondre présent aux demandes de nos client. Cela commence par l'accueil , l'écoute ,le conseil et notre professionalisme envers le client.",
     "about4":" Depuis quelques années, nous proposons à notre clientèle l'entretien et  la préparation de son véhicule pour le controle technique. ",
