--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -30,7 +30,7 @@
     "formulaire" :" dit formulier of telefonisch",
     "preparation":" Voorbereiding op de technische controle",
     "introduction":"Invoering",
-    "introduction-text":"We controleren de staat van de banden, de afstelling van de lichten, de remblokken en remschijven, evenals de schokdempers, en we voeren eventueel het kleine onderhoud van uw auto uit.",
+    "introduction-text":"Onze garage controleren de staat van de banden, de afstelling van de lichten, de remblokken en remschijven, evenals de schokdempers, en we voeren eventueel het kleine onderhoud van uw auto uit.",
     "points de controle":"Controlepunten",
     "controle-text":"We voeren een volledige controle uit van de controlepunten die vereist zijn tijdens de technische controle, waaronder remmen, lichten, uitlaatgasemissie en vele andere cruciale aspecten voor uw veiligheid en die van andere weggebruikers.",
     "importance":"Het belang van voorbereiding",
@@ -57,7 +57,7 @@
     "cookie" : "We gebruiken cookies om uw ervaring op onze site te verbeteren. Door te accepteren, gaat u akkoord met ons gebruik van cookies",
     "accept" : "Ik accepteer cookies",
     "ferme" : "Gesloten",
-    "about1":"De geschiedenis van ons bedrijf begint in 1935, toen Arthur Bosmans na een opleiding als vulkanisator bij Doyen in Brussel in de bandenbranche begon.",
+    "about1":"De geschiedenis van ons garage begint in 1935, toen Arthur Bosmans na een opleiding als vulkanisator bij Doyen in Brussel in de bandenbranche begon.",
     "about2":"Na vijf jaar ondergedoken te hebben gezeten tijdens de Tweede Wereldoorlog, begon hij zijn bandenhandel. Sindsdien zijn wij de derde generatie die deze bandenhandel voortzetten. Het vak is sindsdien sterk veranderd, omdat de bandentechnologie gelukkig is geëvolueerd met de ontwikkeling van nieuwe voertuigen",
     "about3":"Wij hechten veel waarde aan het beantwoorden van de vragen van onze klanten. Dit begint bij het ontvangst, het luisteren, het adviseren en onze professionaliteit tegenover de klant.",
     "about4":"Sinds enkele jaren bieden wij onze klanten het onderhoud en de voorbereiding van hun voertuig voor de technische keuring aan..",
