savoir plus trad

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -72,7 +72,8 @@
     "adresse":"Adresse",
     "liens":"Liens utiles",
     "alert":"Attention: Le garage sera fermé du 31 octobre au 3 novembre 2024",
-    "jantes-title":"Nos partenaires jantes"
+    "jantes-title":"Nos partenaires jantes",
+    "plus":"En savoir plus"
     
 
 
