--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -73,7 +73,8 @@
     "adresse":"adressen",
     "liens":"handige links",
     "alert":"De garage zal gesloten zijn van 31 oktober tot en met 3 november 2024.",
-    "jantes-title":"Onze velgenpartners"
+    "jantes-title":"Onze velgenpartners",
+    "plus":"leer meer"
 
 
 
